<resources>
    <string name="app_name">Inventory</string>
    <string name="action_save">Save</string>
    <string name="category_overview">Overview</string>
    <string name="hint_product_name">Name</string>
    <string name="hint_product_price">Price</string>
    <string name="hint_product_quantity">Quantity</string>
    <string name="supplier_overview">Supplier</string>
    <string name="hint_supplier_name">Name</string>
    <string name="hint_supplier_phone">Phone Number</string>
    <string name="in_stock">Yes</string>
    <string name="not_in_stock">No</string>
    <string name="InStockOverview">In stock</string>
    <string name="editor_activity_title_new_product">Add a Product</string>
    <string name="editor_activity_title_edit_product">Edit Product</string>
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>
    <string name="discard">Discard</string>
    <string name="keep_editing">Keep Editing</string>
    <string name="editor_insert_product_failed">Insert Product Failed</string>
    <string name="editor_insert_product_successful">Insert Product Successful</string>
    <string name="editor_update_product_failed">Update Product Failed</string>
    <string name="editor_update_product_successful">Update Product Successful</string>
    <string name="editor_delete_product_failed">Delete Product failed</string>
    <string name="editor_delete_product_successful">Delete Product Successful</string>
    <string name="delete_dialog_msg">Delete this product?</string>
    <string name="delete_all_dialog_msg">Delete all products?</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete All</string>
    <string name="cancel">Cancel</string>
    <string name="action_delete_all_entries">Delete All Products</string>
    <string name="empty_view_title_text">There are no products…</string>
    <string name="empty_view_subtitle_text">Get started by adding a product</string>
    <string name="action_delete">Delete</string>
    <string name="sale">Sale</string>
    <string name="sale_not_in_stock">Not in stock</string>
    <string name="first_enter_the_quantity">First enter the quantity</string>
    <string name="call">Call</string>
    <string name="no_phone_number_found">No phone number found</string>
    <string name="dial_tel">tel:</string>
    <string name="empty_inventory">Empty Inventory</string>
    <string name="decrease_quantity_Button">-</string>
    <string name="increase_quantity_button">+</string>
    <string name="required_elements">All fields must be filled!</string>
    <string name="no_update_required_elements">No Update, all fields must be filled!</string>
    <string name="Invalid">Invalid</string>
    <string name="Done">Done</string>
    <string name="update_table_from">Updating table from</string>
    <string name="TO">to</string>
    <string name="IOException">IOException:</string>
    <string name="Script_found">Script found. Executing...</string>
    <string name="SQL_script_empty">SQL script file name is empty</string>
    <string name="migration_file">Looking for migration file:</string>
    <string name="from_to_sql">from_%d_to_%d.sql</string>
    <string name="failed_insert">Failed to insert row for</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="price">Price: </string>
    <string name="inStockText">In stock: </string>
    <string name="quantityText">Quantity: </string>
    <string name="mood">mood</string>
    <string name="exception_running_upgrade_script">exception_running_upgrade_script</string>
</resources>
